Bluewolf SFMTA/src/objects/Stop_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Stop_Schedule__c</fullName>
        <label>Stop Schedule</label>
        <referenceTo>Stop_Schedule__c</referenceTo>
        <relationshipLabel>Stop Locations</relationshipLabel>
        <relationshipName>Stop_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stop__c</fullName>
        <label>Stop</label>
        <referenceTo>Stops__c</referenceTo>
        <relationshipLabel>Stop Events</relationshipLabel>
        <relationshipName>Stop_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Stops_per_Month__c</fullName>
        <inlineHelpText>How many times will any shuttle stop at this location in any given day?</inlineHelpText>
        <label>Stops per Day</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Stop Junction</label>
    <nameField>
        <displayFormat>SJ-{0000}</displayFormat>
        <label>Stop Junction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stop Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>